--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/form.png" />
     <title>Sign-Up-Form</title>
   </head>
   <body>
@@ -13,48 +14,69 @@
       <div class="right-container">
         <div class="right-header">
           <h2>
-            This is not a real online service! You know you need something like
-            this in your life to help you realize your deepest dreams. Sign up
-            <em>now</em> to get started.
+            This is not a real online service! You know you need something
+            <br />
+            like this in your life to help you realize your deepest dreams.
+            <br />
+            Sign up <em>now</em> to get started. <br /><br />
+            You <em>know</em> you want to.
           </h2>
           <br />
-          <h2>You <em>know</em> you want to.</h2>
         </div>
         <div class="right-sign-up">
           <h3>Let's do this!</h3>
-          <form>
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="first-name" required />
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="last-name" required />
-            <br />
+          <form action="/" method="get" class="main-form">
+            <div>
+              <label for="first-name">First Name</label>
+              <input type="text" id="first-name" name="first-name" required />
+            </div>
+            <div>
+              <label for="last-name">Last Name</label>
+              <input type="text" id="last-name" name="last-name" required />
+            </div>
+            <div>
+              <label for="user-email">Email Address</label>
+              <input type="email" id="user-email" name="user-email" required />
+            </div>
+            <div>
+              <label for="phone-number">Phone Number</label>
+              <input
+                type="tel"
+                id="phone-number"
+                name="phone-number"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                title="Example: 123-456-7890"
+                required
+              />
+            </div>
+            <div>
+              <label for="user-password">Password</label>
+              <input
+                type="password"
+                id="user-password"
+                name="user-password"
+                required
+              />
+            </div>
 
-            <label for="user-email">Email Address</label>
-            <input type="email" id="user-email" name="user-email" required />
-            <label for="phone-number">Phone Number</label>
-            <input type="tel" id="phone-number" name="phone-number" required />
-            <br />
-            <label for="user-password">Password</label>
-            <input
-              type="password"
-              id="user-password"
-              name="user-password"
-              required
-            />
-            <label for="confirm-password">Confirm Password</label>
-            <input
-              type="password"
-              id="confirm-password"
-              name="confirm-password"
-              required
-            />
+            <div>
+              <label for="confirm-password">Confirm Password</label>
+              <input
+                type="password"
+                id="confirm-password"
+                name="confirm-password"
+                required
+              />
+            </div>
+            <button type="submit">Create Account</button>
           </form>
         </div>
+        <div id="password-error"></div>
         <div class="right-footer">
-          <button type="submit">Create Account</button>
           <p>Already have an account? <a href="">Log in</a></p>
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
